project/apps/authentik-shared/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: authentik
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: server
    version: blue
  ports:
    - name: http
      port: 80
      targetPort: 9000
      nodePort: 30080
      protocol: TCP
