project/apps/authentik-shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: authentik
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  ingressClassName: haproxy
  rules:
    - host: authentik.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik
                port:
                  number: 80
